
  [ dann frazier ]
  * Add pata-modules to cdrom config for ia64. Closes: #622187.

  [ Otavio Salvador ]
  * i386 (xen): use 686-pae flavour
  * Switch Linux kernel to 2.6.39 (ABI 2).

  [ Joey Hess ]
  * Apply internal documentation typo and wording fix patch from
    Karl Goetz. Closes: #633606

  [ Otavio Salvador ]
  * Update Linux kernel to 3.0.0-1

  [ Samuel Thibault ]
  * Mention kernel type in any-x86 boot menu.

  [ Hector Oron ]
  * [armel] Add support for Linkstation Mini.
    Thanks Benjamin Cama. (Closes: #637339)

  [ Philipp Kern ]
  * Add support for s390x.

 -- Hector Oron <zumbi@debian.org>  Wed, 10 Aug 2011 17:30:26 +0100

debian-installer (20110106) unstable; urgency=low

  * Use SpaceFun theme. Closes #603554.
  * Update Linux kernel to 2.6.32-29.

 -- Otavio Salvador <otavio@debian.org>  Thu, 06 Jan 2011 09:37:41 -0200

debian-installer (20101127) unstable; urgency=low

  [ Christian Perrier ]
  * Add pata-modules to powerpc builds to properly support
    YDL Powerstation. Thanks to Milan Kupcevic. Closes: #603893
  * Add ttf-lao-udeb to graphical installer to properly support the Lao
    language

 -- Otavio Salvador <otavio@debian.org>  Sat, 27 Nov 2010 15:18:28 -0200

debian-installer (20101121) unstable; urgency=low

  [ Otavio Salvador ]
  * Enable localudebs usage again since #600852 has been fixed.
  * Add VCS-Browser field to debian.control. Closes: #601908

  [ Martin Michlmayr ]
  * LS Pro: /boot can be ext3 too.  Thanks Ryan Tandy.

  [ Otavio Salvador ]
  * Update Linux kernel udebs for 2.6.32-27.
  * sparc/sparc64: put input-modules into initrd. Closes: #602740

  [ Colin Watson ]
  * geniso_hybrid_plus_firmware_partition: Cope if the disk size exceeds
    32MB.  (The previous code seems to have misunderstood isohybrid's
    defaults slightly, but we now just specify the full CHS geometry
    explicitly in case anything changes in the future.)

  [ Christian Perrier ]