@@ -161,6 +161,7 @@ Build-Depends:
 
 Package: debian-installer
 Architecture: any
+Built-Using: ${initrd:Built-Using}
 Description: Debian installer
  This package currently only contains some documentation for the Debian
  installer. We welcome suggestions about what else to put in it.
