@@ -62,6 +62,9 @@ binary-arch: install
 		-X internals.xml -X partman-doc.sgml
 	dh_compress
 	dh_fixperms
+
+	./build/util/write-built-using
+
 	dh_gencontrol
 	dh_md5sums
 	dh_builddeb
