@@ -97,6 +97,8 @@ debian-installer (2011xxxx) UNRELEASED; urgency=low
 
   [ Otavio Salvador ]
   * Update Linux kernel to 3.0.0-1
+  * Output information of all used udebs into the debian-installer
+    binary package for usage by the archive tool
 
   [ Samuel Thibault ]
   * Mention kernel type in any-x86 boot menu.
